--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 							<header>
 								<h1>Hi! I'm <strong>Migi Castro</strong>.</h1>
 							</header>
-							<p>An aspiring software engineer.</p>
+							<p>
+								I'm an analytical thinker and effective communicator seeking to leverage skills in product marketing to transition into software engineering. With a user-centric mindset, problem-solving abilities, and experience in data analysis, I am well-equipped to optimize code, design intuitive interfaces, and deliver high-quality software solutions.
+							</p>
 							<a href="#portfolio" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
