--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/survey.jpg" alt="" /></a>
-								<h3><a href="#">Survey Form</a></h3>
+								<a href="https://igim11.github.io/Survey-Form/" class="image featured"><img src="images/survey.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Survey-Form/">Survey Form</a></h3>
 								<p>A survey form to collect feedback from consumers.</p>
 							</article>
 						</div>
