--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://igim11.github.io/Product-Landing-Page/" class="image featured"><img src="images/twice-img phone.png" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Product-Landing-Page/">Survey Form</a></h3>
+								<h3><a href="https://igim11.github.io/Product-Landing-Page/">Product Landing Page</a></h3>
 								<p>A landing page for Twice's 5th World Tour.</p>
 							</article>
 						</div>
