--- a/html5up-miniport/index.html
+++ b/html5up-miniport/index.html
@@ -77,7 +77,14 @@
 								<p>A landing page for Twice's 5th World Tour.</p>
 							</article>
 						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://igim11.github.io/Momentum-App/" class="image featured"><img src="images/momentum-app.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Momentum-App/">Momentum App</a></h3>
+								<p>My own version of the Momentum App.</p>
+							</article>
 						</div>
+					</div>
 					</div>
 					<footer>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
