--- a/index.html
+++ b/index.html
@@ -46,49 +46,63 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s a collection of stuff I made.</h2>
+						<h2>My Work</h2>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://igim11.github.io/Finance-Tracker/" target="_blank" class="image featured"><img src="images/finance.jpg" alt="" /></a>
 								<h3><a href="https://igim11.github.io/Finance-Tracker/" target="_blank">Finance Tracker</a></h3>
-								<p>This web app allows users to track and analyze their finances.</p>
+								<p><a href="https://github.com/igim11/Finance-Tracker" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://igim11.github.io/Tribute-Page/" target="_blank" class="image featured"><img src="images/mj-rings.png" alt="" /></a>
 								<h3><a href="https://igim11.github.io/Tribute-Page/" target="_blank">Tribute Page</a></h3>
-								<p>A simple web page to pay tribute to Michael Jordan.</p>
+								<p><a href="https://github.com/igim11/Tribute-Page" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Survey-Form/" class="image featured"><img src="images/survey.jpg" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Survey-Form/">Survey Form</a></h3>
-								<p>A survey form to collect feedback from consumers.</p>
+								<a href="https://igim11.github.io/Survey-Form/" target="_blank" class="image featured"><img src="images/survey.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Survey-Form/" target="_blank">Survey Form</a></h3>
+								<p><a href="https://github.com/igim11/Survey-Form" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Product-Landing-Page/" class="image featured"><img src="images/twice-img phone.png" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Product-Landing-Page/">Product Landing Page</a></h3>
-								<p>A landing page for Twice's 5th World Tour.</p>
+								<a href="https://igim11.github.io/Product-Landing-Page/" target="_blank" class="image featured"><img src="images/concert.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Product-Landing-Page/" target="_blank">Product Landing Page</a></h3>
+								<p><a href="https://github.com/igim11/Product-Landing-Page" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Momentum-App/" class="image featured"><img src="images/momentum-app.jpg" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Momentum-App/">Momentum App</a></h3>
-								<p>My own version of the Momentum App.</p>
+								<a href="https://igim11.github.io/Momentum-App/" target="_blank" class="image featured"><img src="images/productivityapp.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Momentum-App/" target="_blank">Productivity App</a></h3>
+								<p><a href="https://github.com/igim11/Momentum-App" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Tic-Tac-Toe/" class="image featured"><img src="images/tictactoe.png" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Tic-Tac-Toe/">Tic Tac Toe</a></h3>
-								<p>A simple game of Tic Tac Toe.</p>
+								<a href="https://igim11.github.io/Tic-Tac-Toe/" target="_blank" class="image featured"><img src="images/tictactoe.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Tic-Tac-Toe/" target="_blank">Tic Tac Toe</a></h3>
+								<p><a href="https://github.com/igim11/Tic-Tac-Toe" target="_blank">See Code Here</a></p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://bankingapp-beta.vercel.app/" target="_blank" class="image featured"><img src="images/banking.jpg" alt="" /></a>
+								<h3><a href="https://bankingapp-beta.vercel.app/" target="_blank">Banking App</a></h3>
+								<p><a href="https://github.com/andrewizo/bankingapp" target="_blank">See Code Here</a></p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://slack-app-igim11.vercel.app/" target="_blank" class="image featured"><img src="images/messaging.jpg" alt="" /></a>
+								<h3><a href="https://slack-app-igim11.vercel.app/" target="_blank">Messaging App</a></h3>
+								<p><a href="https://github.com/igim11/slack-app" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 					</div>
