added food inventory, stock, and journal app

--- a/index.html
+++ b/index.html
@@ -51,30 +51,30 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Finance-Tracker/" target="_blank" class="image featured"><img src="images/finance.jpg" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Finance-Tracker/" target="_blank">Finance Tracker</a></h3>
-								<p><a href="https://github.com/igim11/Finance-Tracker" target="_blank">See Code Here</a></p>
+								<a href="https://github.com/igim11/Online-Food-Inventory-Management-App" target="_blank" class="image featured"><img src="images/food.jpg" alt="" /></a>
+								<h3><a href="https://github.com/igim11/Online-Food-Inventory-Management-App" target="_blank">Food Inventory App</a></h3>
+								<p><a href="https://github.com/igim11/Online-Food-Inventory-Management-App" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Tribute-Page/" target="_blank" class="image featured"><img src="images/mj-rings.png" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Tribute-Page/" target="_blank">Tribute Page</a></h3>
-								<p><a href="https://github.com/igim11/Tribute-Page" target="_blank">See Code Here</a></p>
+								<a href="https://github.com/igim11/stock-trading-app" target="_blank" class="image featured"><img src="images/stock.jpg" alt="" /></a>
+								<h3><a href="https://github.com/igim11/stock-trading-app" target="_blank">Stock Trading App</a></h3>
+								<p><a href="https://github.com/igim11/stock-trading-app" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Survey-Form/" target="_blank" class="image featured"><img src="images/survey.jpg" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Survey-Form/" target="_blank">Survey Form</a></h3>
-								<p><a href="https://github.com/igim11/Survey-Form" target="_blank">See Code Here</a></p>
+								<a href="https://slack-app-igim11.vercel.app/" target="_blank" class="image featured"><img src="images/messaging.jpg" alt="" /></a>
+								<h3><a href="https://slack-app-igim11.vercel.app/" target="_blank">Messaging App</a></h3>
+								<p><a href="https://github.com/igim11/slack-app" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Product-Landing-Page/" target="_blank" class="image featured"><img src="images/concert.jpg" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Product-Landing-Page/" target="_blank">Product Landing Page</a></h3>
-								<p><a href="https://github.com/igim11/Product-Landing-Page" target="_blank">See Code Here</a></p>
+								<a href="https://rails-journal-app.onrender.com" target="_blank" class="image featured"><img src="images/journal.jpg" alt="" /></a>
+								<h3><a href="https://rails-journal-app.onrender.com" target="_blank">Journal App</a></h3>
+								<p><a href="https://github.com/igim11/Rails-Journal-App" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -86,13 +86,6 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://igim11.github.io/Tic-Tac-Toe/" target="_blank" class="image featured"><img src="images/tictactoe.jpg" alt="" /></a>
-								<h3><a href="https://igim11.github.io/Tic-Tac-Toe/" target="_blank">Tic Tac Toe</a></h3>
-								<p><a href="https://github.com/igim11/Tic-Tac-Toe" target="_blank">See Code Here</a></p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
 								<a href="https://bankingapp-beta.vercel.app/" target="_blank" class="image featured"><img src="images/banking.jpg" alt="" /></a>
 								<h3><a href="https://bankingapp-beta.vercel.app/" target="_blank">Banking App</a></h3>
 								<p><a href="https://github.com/andrewizo/bankingapp" target="_blank">See Code Here</a></p>
@@ -100,11 +93,39 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://slack-app-igim11.vercel.app/" target="_blank" class="image featured"><img src="images/messaging.jpg" alt="" /></a>
-								<h3><a href="https://slack-app-igim11.vercel.app/" target="_blank">Messaging App</a></h3>
-								<p><a href="https://github.com/igim11/slack-app" target="_blank">See Code Here</a></p>
+								<a href="https://igim11.github.io/Tic-Tac-Toe/" target="_blank" class="image featured"><img src="images/tictactoe.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Tic-Tac-Toe/" target="_blank">Tic Tac Toe</a></h3>
+								<p><a href="https://github.com/igim11/Tic-Tac-Toe" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://igim11.github.io/Finance-Tracker/" target="_blank" class="image featured"><img src="images/finance.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Finance-Tracker/" target="_blank">Finance Tracker</a></h3>
+								<p><a href="https://github.com/igim11/Finance-Tracker" target="_blank">See Code Here</a></p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://igim11.github.io/Product-Landing-Page/" target="_blank" class="image featured"><img src="images/concert.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Product-Landing-Page/" target="_blank">Product Landing Page</a></h3>
+								<p><a href="https://github.com/igim11/Product-Landing-Page" target="_blank">See Code Here</a></p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://igim11.github.io/Survey-Form/" target="_blank" class="image featured"><img src="images/survey.jpg" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Survey-Form/" target="_blank">Survey Form</a></h3>
+								<p><a href="https://github.com/igim11/Survey-Form" target="_blank">See Code Here</a></p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://igim11.github.io/Tribute-Page/" target="_blank" class="image featured"><img src="images/mj-rings.png" alt="" /></a>
+								<h3><a href="https://igim11.github.io/Tribute-Page/" target="_blank">Tribute Page</a></h3>
+								<p><a href="https://github.com/igim11/Tribute-Page" target="_blank">See Code Here</a></p>
+							</article>
+						</div>			
 					</div>
 					</div>
 					<footer>
