added link for food app

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/igim11/Online-Food-Inventory-Management-App" target="_blank" class="image featured"><img src="images/food.jpg" alt="" /></a>
-								<h3><a href="https://github.com/igim11/Online-Food-Inventory-Management-App" target="_blank">Food Inventory App</a></h3>
+								<a href="https://onlinefood-app.onrender.com/" target="_blank" class="image featured"><img src="images/food.jpg" alt="" /></a>
+								<h3><a href="https://onlinefood-app.onrender.com/" target="_blank">Food Inventory App</a></h3>
 								<p><a href="https://github.com/igim11/Online-Food-Inventory-Management-App" target="_blank">See Code Here</a></p>
 							</article>
 						</div>
